# ComfyUI-llama-cpp-vulkan

./: .gitignore  AGENTS.md  README.md  README_zh.md  __init__.py  nodes.py  pyproject.toml  pyrightconfig.json  requirements.txt  复核结论.md  项目分析报告.html
.github/workflows/: build-vulkan-wheels-abi3.yml  build-vulkan-wheels.yml
app/: __init__.py
app/core/: __init__.py  cqdm.py  devices.py  gguf_layers.py  handlers.py  instruct.py  model_paths.py  prompts.py  storage.py
app/nodes/: __init__.py
app/nodes/model/: __init__.py  node_loaders.py  node_parameters.py  node_unload.py
app/nodes/type/: __init__.py
app/nodes/type/media/: __init__.py  encoding.py
app/nodes/type/media/audio/: __init__.py  node_instruct.py
app/nodes/type/media/bbox/: __init__.py  bbox_utils.py  node_bbox.py
app/nodes/type/media/image/: __init__.py  node_instruct.py
app/nodes/type/media/video/: __init__.py  node_instruct.py
app/nodes/type/text/: __init__.py  node_instruct.py
app/nodes/util/: __init__.py  node_parse_json.py  node_prompt_enhancer.py  node_remove_code_block.py  node_split_output.py  node_system_prompt.py  prompt_enhancer_presets.py  system_prompt_presets.py
app/shared/: __init__.py  logger.py  text_utils.py  types.py
docs/: 项目分析.html
nodes/: __init__.py  bbox.py  devices.py  handlers.py  llm.py  shared.py  utils_nodes.py
scripts/: check_devices.py
src/core/: cqdm.py  devices.py  gguf_layers.py  handlers.py  instruct.py  locale_sync.py  model_paths.py  prompts.py  storage.py
src/i18n/: common_static.py  lang.py  language_en-US.py  language_zh-CN.py  locale_settings.py
src/nodes/: __init__.py
src/nodes/bbox/: bbox_utils.py  node_bboxes_to_bbox.py  node_bboxes_to_mask.py  node_bboxes_to_segs.py  node_json_to_bboxes.py
src/nodes/instruct/media/audio/: node_instruct.py
src/nodes/instruct/media/image/: node_instruct.py
src/nodes/instruct/media/video/: node_instruct.py
src/nodes/instruct/text/: node_instruct.py
src/nodes/model/: node_loaders.py  node_parameters.py  node_unload.py
src/nodes/type/media/: encoding.py
src/nodes/type/media/audio/: node_instruct.py
src/nodes/type/media/bbox/: bbox_utils.py  node_bbox.py
src/nodes/type/media/image/: node_instruct.py
src/nodes/type/media/video/: node_instruct.py
src/nodes/type/text/: node_instruct.py
src/nodes/util/: node_parse_json.py  node_remove_code_block.py  node_split_output.py  node_system_prompt.py  system_prompt_presets.py
src/shared/: encoding.py  logger.py  text_utils.py  types.py
support/: cqdm.py  gguf_layers.py  prompt_enhancer_preset.py
tests/: __init__.py  comfy_stubs.py  test_bbox_segs_mask.py  test_bbox_utils.py  test_bboxes_to_bbox.py  test_cqdm.py  test_devices.py  test_encoding.py  test_gguf_layers.py  test_handlers.py  test_i18n_format.py  test_image_instruct.py  test_instruct_run.py  test_instruct_utils.py  test_json_to_bboxes.py  test_lang.py  test_loaders.py  test_locale_settings.py  test_locale_sync.py  test_media_instruct.py  test_model_paths.py  test_node_registry.py  test_node_unload.py  test_parse_json_node.py  test_resolve_config.py  test_storage_estimates.py  test_storage_lifecycle.py  test_system_prompt_node.py  test_text_utils.py  test_video_sampling.py  test_wheel_contract.py
tests/web/: comfy_api_stub.mjs  comfy_app_stub.mjs  harness.mjs  image_instruct.test.mjs  locale_sync.test.mjs  node_size.test.mjs  vlm_loader.test.mjs  widget_utils.test.mjs
tools/: check_devices.py
web/: image_instruct.js  locale_sync.js  node_size.js  vlm_loader.js  vlm_thinking.js  widget_utils.js
