[project]
name = "comfyui-llama-cpp-vulkan"
description = "Run LLM/VLM models natively in ComfyUI based on llama.cpp with Vulkan GPU acceleration"
version = "2.1.0"
# ABI3 Vulkan wheel 面向 CPython 3.10+
requires-python = ">=3.10"
classifiers = [
     "Operating System :: Microsoft :: Windows",
     "Operating System :: POSIX :: Linux",
]

# llama-cpp-python 有意不在此声明: Comfy Registry 不接受 URL 依赖,
# 平台条件的 Vulkan wheel URL 以 requirements.txt 为准, 安装时必须执行
# pip install -r requirements.txt (README 安装节第 2 步)
dependencies = ["numpy", "pillow>=10.1", "scipy", "tqdm"]

[project.urls]
Repository = "https://github.com/hcwhan/ComfyUI-llama-cpp-vulkan"
Documentation = "https://github.com/hcwhan/ComfyUI-llama-cpp-vulkan/blob/main/README.md"
"Bug Tracker" = "https://github.com/hcwhan/ComfyUI-llama-cpp-vulkan/issues"

[tool.comfy]
PublisherId = "hcwhan"
DisplayName = "ComfyUI-llama-cpp-vulkan"
Icon = ""
includes = []
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

[tool.ruff]
# target-version 自动取自上方 requires-python (>=3.10), 不重复声明
line-length = 140

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "PL",  # Pylint
]
ignore = [
    # 中文文案与模板字符串天然超长, 行宽只约束代码行, 长字符串不折行
    "E501",
    # ComfyUI 节点类的 process/loadmodel 等入口由框架调用, 复杂度阈值不适用
    "PLR0913", # 参数过多: Instruct 节点入口需铺开全部采样参数
    "PLR0912", # 分支过多
    "PLR0915", # 语句过多
    "PLR2004", # 魔法数字: 张量维度/采样默认值场景大量存在, 逐一命名反而降低可读性
]

[tool.ruff.lint.per-file-ignores]
# 契约测试的函数内 import 是有意为之: 逐接口惰性导入, 断裂时报错定位到具体用例
"tests/*" = ["PLC0415"]

[tool.ruff.format]
# 项目字符串引号风格以双引号为主, 与 format 默认一致; docstring 保持原样
docstring-code-format = false
# 语言文案文件是手工排版的数据文件: 含换行的文本按 "每 UI 行一个源码行" 的
# 多字面量形态书写, 且用空行分隔条目组; ruff format 会把够短的相邻字面量
# 合并回单行并删除 dict 内空行, 破坏该排版约定, 故排除 (lint 仍然生效)
exclude = ["src/i18n/language_*.py"]
